<resources>
    <string name="app_name">Yakira</string>

    <!--    Login Activity Strings-->
    <string name="login_toolbar_title">Login</string>
    <string name="hint_login_email">E-mail</string>
    <string name="hint_login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_nav_to_register">Register</string>

    <!--    Register Activity Strings-->
    <string name="register_toolbar_title">Register</string>
    <string name="hint_register_name">Name</string>
    <string name="hint_register_email">E-mail</string>
    <string name="hint_register_account_type">Account Type</string>
    <string name="hint_register_password">Create Password</string>
    <string name="hint_register_confirm_password">Re-type Password</string>
    <string name="btn_register">Register</string>
    <string name="account_type_admin">0</string>
    <string name="account_type_basic">1</string>
    <string name="error_unfilled_fields">Please fill all fields</string>
    <string name="error_unmatched_passwords">Passwords do not match</string>
    <string name="error_invalid_account_type">0 for Admin, 1 for General</string>
    <string name="error_register_failure">Registration Failed</string>
    <string name="msg_register_success">Successfully Registered</string>

    <!--    Main Activity Strings-->
    <string name="home_fragment_title">Home</string>
    <string name="greeting">Hi, <br></br> </string>

    <string name="add_member_fragment_title">Add Member</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    Add Member Fragment Strings-->
    <string name="field_empty_error_message">Please fill all fields</string>
    <string name="contact_null_error_message">Error: Member contact not available</string>
    <string name="permission_granted_acknowledgement">Permission Granted. You may proceed to call now</string>
    <string name="permission_denied_acknowledgement">Permission Denied. You cannot make calls :(</string>
    <string name="permission_denied_action_ok">Okay</string>
    <string name="confirm_call_team_title">Call Team Member?</string>
    <string name="confirm_call_team_message">
        You have clicked to call a team member. Do you want to proceed?
    </string>
    <string name="confirm_call_team_action_yes">Yes</string>
    <string name="confirm_call_team_action_no">No</string>

</resources>
